Add about us container

--- a/style.sass
+++ b/style.sass
@@ -79,3 +79,51 @@ header
     text-align: center
     color: #ffffff
     text-transform: uppercase
+.about-us .container .about-wrapper 
+    display: flex
+    justify-content: center
+    flex-direction: column
+.about-us .container h5
+    font-family: Open Sans
+    font-size: 25px
+    font-weight: 800
+    text-align: center
+    text-transform: uppercase
+    color: #333333
+    padding-top: 100px
+.about-us .container .strik
+    display: flex
+    justify-content: center
+.about-us .container .strik p
+    width: 60px
+    height: 5px
+    background-color: #f38181
+    margin-top: 32px
+
+.about-us .container .about-wrapper .about-text
+    height: 39px
+    font-family: Open Sans
+    font-size: 15px
+    line-height: 1.6
+    text-align: center
+    margin-top: 47px
+    margin-bottom: 100px
+    color: #999999
+.product-item
+    overflow: hidden
+
+.product-item img
+    max-width: 100%
+    
+@media(max-width: 768px)
+    .last
+        margin-left: 25%!important
+
+@media(max-width: 575px)
+    .last
+        margin-left: 0%!important
+@media(max-width: 575px)
+    .product-item
+        margin-right: auto
+    .col-sm-6
+        margin-left: auto
