--- a/style.sass
+++ b/style.sass
@@ -6,7 +6,7 @@ body
 
 header  
     width: 100%
-    height: 100vh
+    min-height: 715px
     background-image: url('img/image.jpg')
     position: relative
     background-position: center
@@ -115,15 +115,82 @@ header
 .product-item img
     max-width: 100%
     
-@media(max-width: 768px)
+@media(max-width: 767px)
     .last
         margin-left: 25%!important
+    .product-item
+        margin-top: 25px
 
 @media(max-width: 575px)
     .last
         margin-left: 0%!important
 @media(max-width: 575px)
     .product-item
+        max-width: 320px 
+        text-align: center
+        padding-left: 15px
         margin-right: auto
-    .col-sm-6
-        margin-left: auto
+        align-items: center
+.col-sm-6
+    margin-left: auto
+
+.services .container .services-wrapper 
+    display: flex
+    justify-content: center
+    flex-direction: column
+
+.services .services-wrapper h5 
+    font-family: Open Sans
+    font-size: 25px
+    font-weight: 800
+    text-align: center
+    text-transform: uppercase
+    color: #333333
+    padding-top: 100px
+.services .container .strik
+    display: flex
+    justify-content: center
+.services .container .strik p
+    width: 60px
+    height: 5px
+    background-color: #f38181
+    margin-top: 32px
+
+.services .container-fluid .row
+    justify-content: center
+
+.services .container-fluid .product-description
+    margin-left: 30px
+    margin-right: 30px
+
+.services .container-fluid .product-description img 
+    margin-right: 16px
+.services .container-fluid .product-description span 
+    font-family: Open Sans
+    font-size: 14px
+    font-weight: 800
+    text-align: left
+    color: #333333
+    text-transform: uppercase
+.services .container-fluid .product-description p 
+    font-family: Open Sans
+    font-size: 15px
+    line-height: 1.6
+    text-align: left
+    margin-left: 53px
+    color: #999999
+footer 
+    height: 295px
+    background-color: #f8f8f8
+.footer-text 
+    height: 295px
+    display: flex
+    justify-content: center
+    align-items: center
+.footer-text span 
+    font-family: Open Sans
+    font-size: 14px
+    text-align: center
+    color: #333333
+.footer-text .autor 
+    color: #f38181
